# painter

./: .gitignore  Makefile  README.rst  pyproject.toml
paint/: window.py
tests/: test_paint.py
